--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "zod": "^3.25.69"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.30.1",
     "@types/eslint": "^9.6.1",
     "@types/node": "^24.0.10",
     "@types/react": "^19.1.8",
